--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@ Color: <input type = "text" name = "color">
 Release Date: <input type = "text" name = "releaseDate">
 <input type = "submit" value="Add Item">
 </form> <br />
-<a href ="viewAllItemsServlet">View the complete list</a>
+<a href ="viewAllItemsServlet">View the complete list</a> <br />
 <a href="viewAllListsServlet">View all phone lists</a> <br />
 <a href="addPhonesForListServlet">Create a new list</a>
 </body>
