Adding some servlets and jsps
I added some more stuff to the web side of things

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,9 @@
 <form action = "addItemServlet" method="post">
 Phone: <input type ="text" name = "name">
 Color: <input type = "text" name = "color">
-Release Date: <input type = "text" name = "releaseDate">
+Release month: <input type = "text" name = "month">
+Release day: <input type = "text" name = "day">
+Release year: <input type = "text" name = "year">
 <input type = "submit" value="Add Item">
 </form> <br />
 <a href ="viewAllItemsServlet">View the complete list</a> <br />
